--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ description: Flutter Wanandroid App.
 version: 0.1.5
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  #sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
